[package]
name = "swisseph"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"
keywords = ["ephemeris", "astrology", "astronomy", "zodiac", "zodiacal"]
description = "More ergonomic wrapper for the Swiss Ephemeris"
authors = ["Jon <jonrowlands83@gmail.com>"]

[dependencies]
bitmask-enum = "2.2.4"
strum = "0.26"
strum_macros = "0.26"

## You can also access strum_macros exports directly through strum using the "derive" feature
#strum = { version = "0.26", features = ["derive"] }

libswisseph-sys = "0.1.0"

derive_builder = "0.20.0"

[dev-dependencies] 
serde = "1.0.204"
serde_derive = "1.0.204"
toml = "0.8.19"
chrono = "0.4.38"
